# pr-vm-execute

./: CHANGELOG.md  Makefile  README.md
c-api/: Cargo.toml  libvmexeccapi.h
c-api/src/: capi_vm_hook_pointers.rs  capi_vm_hooks.rs
vm-executor/: Cargo.toml  README.md
vm-executor-wasmer/: Cargo.toml
vm-executor-wasmer/src/: wasmer_imports.rs
vm-executor-wasmer/tests/common/: test_wat.rs
vm-executor/src/: vm_hooks.rs
