[package]
name = "dharitri-chain-vm-executor-wasmer"
version = "0.5.0"
edition = "2021"
publish = false # will also be published, but it is not yet ready for that

[lib]

[dependencies]
dharitri-chain-vm-executor = { path = "../vm-executor" }

wasmer = { git = "https://github.com/Dharitri-org/wasmer.git", rev = "1a1461c", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }

wasmer-vm = { git = "https://github.com/Dharitri-org/wasmer.git", rev = "1a1461c" }
wasmer-types = { git = "https://github.com/Dharitri-org/wasmer.git", rev = "1a1461c" }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
